<resources>
    <string name="AppName">FixMyCity</string>
    <string name="AppDescription">דיווח ושקיפות במפגעים עירוניים</string>
    <string name="EmailHint">דואר אלקטרוני</string>
    <string name="PasswordHint">סיסמה</string>
    <string name="LoginText">התחברות</string>
    <string name="NewAccountText">יצירת חשבון חדש</string>
    <string name="appLogoDescription">AppLogo</string>
    <string name="registerWord">להרשמה</string>
    <string name="NoAccountQuestionText">אין לך חשבון?</string>
    <string name="newAccountHeader">יצירת חשבון חדש</string>
    <string name="newAccountDescText">הצטרף לקהילה והתחל לדווח</string>
    <string name="passwordConstraint">סיסמה (לפחות 6 תווים)</string>
    <string name="passwordVerifyText">אימות סיסמה</string>
    <string name="signUpText">הרשמה</string>
    <string name="signInText">להתחברות</string>
    <string name="HavingAccountQuestionText">כבר יש לך חשבון?</string>
    <string name="emailHintFilled">fixMyCity@mail.com</string>
    <string name="filterBarAllCityText">כל הערים</string>
    <string name="filterBarAllNeighborhoodText">כל השכונות</string>
    <string name="addNewReportText">הוספת דיווח חדש</string>
    <string name="NoReportsAvailableText">אין דיווחים באזור הנבחר</string>
    <string name="logOutText">התנתקות מהמערכת</string>
    <string name="backToMainActivityDesc">חזרה למסך ראשי</string>
    <string name="newReportTextHeader">דיווח חדש</string>
    <string name="reportImageDesc">תמונת המפגע</string>
    <string name="reportImageText">צילום / צירוף תמונת מפגע *</string>
    <string name="reportDescHint">תיאור המפגע *</string>
    <string name="chooseCityHint">בחירת עיר *</string>
    <string name="chooseNeighborhoodHint">בחירת שכונה *</string>
    <string name="optionalAddressHInt">רחוב ומספר בית (אופציונלי)</string>
    <string name="chooseCategoryHint">בחירת קטגוריה *</string>
    <string name="sendReportTextBtn">שליחת דיווח</string>
    <string name="reportImagePlaceholder">תמונת המפגע</string>
    <string name="reportStatusText">התקבל</string>
    <string name="categoryTypeText">תשתיות וכבישים</string>
    <string name="cityNameAndNeighborhoodText">תל אביב-יפו, פלורנטין</string>
    <string name="addressSpecificationText">רחוב אברבנאל 42</string>
    <string name="hazardDescriptionTextExample">בור עמוק במרכז הכביש המהווה סכנה רצינית לרוכבי אופנוע ומכוניות.</string>
    <string name="dateExample">06/08/2026 14:30</string>
    <string name="toggleUpvoteIcon">הצבעת תמיכה במפגע</string>
    <string name="zero">0</string>
</resources>